--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="app_by">Rafa Navarro</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
-    <string name="title_activity_main">Main</string>free play
-    <string name="card_back_title">text card back title</string>
+    <string name="title_activity_main">Main</string>
+free play    <string name="card_back_title">text card back title</string>
     <string name="card_back_description">text card back description</string>
     <string name="description_image_1">text description image 1</string>
     <string name="start">TAP TO START!</string>
@@ -92,7 +92,6 @@
     <string name="game_results_challenge">I CHALLENGE YOU!</string>
     <string name="share_app_text">I\'ve tried the TILES CHALLENGE game app and I loved it. Get it here! It\'s free.\n\nhttps://play.google.com/store/apps/details?id=com.creativefunapps.tileschallenge</string>
     <string name="share_app_via">Share via</string>
-
     <string name="archievements1_easy_level50">Level 50</string>
     <string name="archievements1_easy_level50_desc">\"Taking the first steps\"</string>
     <string name="archievements1_easy_level100">Level 100</string>
@@ -144,7 +143,6 @@
         <item>@string/archievements2_hard_time60</item>
         <item>@string/archievements_all</item>
     </string-array>
-
     <string-array name="archievements_desc_array">
         <item>@string/archievements1_easy_level50_desc</item>
         <item>@string/archievements1_easy_level100_desc</item>
@@ -163,5 +161,7 @@
         <item>@string/archievements2_hard_time60_desc</item>
         <item>@string/archievements_all_desc</item>
     </string-array>
-    
+
+    <string name="title_activity_advertisement">Advertisement</string>
+
 </resources>
