--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -17,27 +17,32 @@
     <string name="button2">CONTRARRELOJ</string>
     <string name="button3">MEMORIA</string>
     <string name="button4">OPCIONES</string>
+    <string name="button6">PUNTUACIONES</string>
     <string name="points">PUNTOS</string>
     <string name="level">NIVEL</string>
     <string name="lives">VIDAS</string>
     <string name="life">vida</string>
     <string name="bonus">BONUS</string>
     <string name="info">INFO</string>
+    <string name="menu_googleplus">Desconectar</string>
     <string name="menu_score">Puntuaciones / Logros</string>
     <string name="menu_share">Compartir</string>
     <string name="menu_comment">Valora la app</string>
     <string name="menu_help">Ayuda</string>
     <string name="menu_config">Configuración</string>
+    <string name="gamemode">MODO DE JUEGO</string>
     <string name="easy">Fácil</string>
     <string name="hard">Difícil</string>
     <string name="difficulty_selection">Elige dificultad</string>
     <string name="all">Todos</string>
+    <string name="not_connected">No estás conectado a Google Play Games. Reinicia el juego y conéctate.</string>
     <string name="score_score">Puntuaciones</string>
-    <string name="score_ranking">Ranking</string>
-    <string name="score_archievements">VER LOGROS</string>
-    <string name="score_archievements2">VER PUNTUACIONES</string>
+    <string name="score_ranking">VER PUNTUACIONES ONLINE</string>
+    <string name="score_achievements_online">VER LOGROS ONLINE</string>
+    <string name="score_archievements">LOGROS</string>
+    <string name="score_archievements2">PUNTUACIONES</string>
     <string name="title_activity_score">Score</string>
-    <string name="score_header">PUNTUACIONES MÁXIMAS</string>
+    <string name="score_header">TUS PUNTUACIONES</string>
     <string name="prefHard">Activa si buscas un desafío mayor</string>
     <string name="prefHardTitle">Dificultad difícil</string>
     <string name="prefDeleteScores">Pulsa para empezar de cero</string>
@@ -83,6 +88,8 @@
     <string name="dialog_retry">REPETIR</string>
     <string name="results_text">RESULTADO DE LA PARTIDA:</string>
     <string name="time">TIEMPO</string>
+    <string name="login">CONECTAR</string>
+    <string name="logout">DESCONECTAR</string>
     <string name="share_dialog_title">Compartir vía</string>
     <string name="share_from_dialog_text_record_archievement_1">He conseguido un récord de</string>
     <string name="share_from_dialog_text_record_archievement_2">puntos, y los siguientes logros: </string>
