--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,27 +17,32 @@
     <string name="button2">TIME TRIAL</string>
     <string name="button3">MEMORY</string>
     <string name="button4">OPTIONS</string>
+    <string name="button6">SCORES</string>
     <string name="points">POINTS</string>
     <string name="level">LEVEL</string>
     <string name="lives">LIVES</string>
     <string name="life">life</string>
     <string name="bonus">BONUS</string>
     <string name="info">INFO</string>
+    <string name="menu_googleplus">Sign out</string>
     <string name="menu_score">Scores / Archievements</string>
     <string name="menu_share">Share</string>
     <string name="menu_comment">Rate this app</string>
     <string name="menu_help">Help</string>
     <string name="menu_config">Settings</string>
+    <string name="gamemode">GAME MODE</string>
     <string name="easy">Easy</string>
     <string name="hard">Hard</string>
     <string name="difficulty_selection">Choose difficulty</string>
     <string name="all">All</string>
+    <string name="not_connected">You are not connected to Google Play Games. Restart game and sign in.</string>
     <string name="score_score">Scores</string>
-    <string name="score_ranking">Ranking</string>
-    <string name="score_archievements">SEE ARCHIEVEMENTS</string>
-    <string name="score_archievements2">SEE SCORES</string>
+    <string name="score_ranking">ONLINE RANKING</string>
+    <string name="score_achievements_online">ONLINE ACHIEVEMENTS</string>
+    <string name="score_archievements">ARCHIEVEMENTS</string>
+    <string name="score_archievements2">SCORES</string>
     <string name="title_activity_score">Score</string>
-    <string name="score_header">HIGH SCORES</string>
+    <string name="score_header">YOUR SCORES</string>
     <string name="prefHard">Check for higher difficulty</string>
     <string name="prefHardTitle">Hard difficulty</string>
     <string name="prefDeleteScores">Tap to start from zero</string>
@@ -83,6 +88,8 @@
     <string name="dialog_retry">RETRY</string>
     <string name="results_text">GAME RESULTS:</string>
     <string name="time">TIME</string>
+    <string name="login">SIGN IN</string>
+    <string name="logout">SIGN OUT</string>
     <string name="share_dialog_title">Share via</string>
     <string name="share_from_dialog_text_record_archievement_1">I\'ve got a record of</string>
     <string name="share_from_dialog_text_record_archievement_2">points, and the following achievements: </string>
@@ -110,9 +117,9 @@
     <string name="archievements1_easy_100points">100.000 Puntos</string>
     <string name="archievements1_easy_100points_desc">\"Treasure hunter\"</string>
     <string name="archievements1_easy_chain">50 consecutive hits</string>
-    <string name="archievements1_easy_chain_desc">\"Lynx\'s eyes\"</string>
+    <string name="archievements1_easy_chain_desc">\"Faultless!\"</string>
     <string name="archievements1_easy_big_chain">75 consecutive hits</string>
-    <string name="archievements1_easy_big_chain_desc">\"Faultless!\"</string>
+    <string name="archievements1_easy_big_chain_desc">\"Lynx\'s eyes\"</string>
     <string name="archievements2_easy_time60">Earn 60 seconds of time</string>
     <string name="archievements2_easy_time60_desc">\"Fast as the wind\"</string>
     <string name="archievements1_hard_level50">Level 50 *</string>
@@ -120,7 +127,7 @@
     <string name="archievements1_hard_level100">Level 100 *</string>
     <string name="archievements1_hard_level100_desc">\"100 levels are little for you\"</string>
     <string name="archievements1_hard_level150">Level 150 *</string>
-    <string name="archievements1_hard_level150_desc">\"You\'re on higher level!\"</string>
+    <string name="archievements1_hard_level150_desc">\"You\'re on a higher level!\"</string>
     <string name="archievements1_hard_50points">50.000 Points *</string>
     <string name="archievements1_hard_50points_desc">\"Top player\"</string>
     <string name="archievements1_hard_10lives">Get 10 lives *</string>
